--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="app.betme.betme">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -27,10 +29,7 @@
             android:name=".Register"
             android:label="@string/title_activity_register"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".AddCredits"
-            android:label="@string/title_activity_add_credits"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".ResultCheckPowerBall" />
     </application>
 
 </manifest>
